@@ -1,5 +1,8 @@
 /*
  * $Log: qlx.h,v $
+ * Revision 1.4  2023-09-19 22:30:56+05:30  Cprogrammer
+ * added QLX_UIDGID define for setting uid, gid error
+ *
  * Revision 1.3  2022-01-30 08:37:29+05:30  Cprogrammer
  * added QLX_DIR definition
  *
@@ -24,5 +27,6 @@
 #define QLX_EXECPW 121
 #define QLX_DIR 122
 #define QLX_EXECHARD 126
+#define QLX_UIDGID 127
 
 #endif
