@@ -1,3 +1,4 @@
+.\" vim: tw=75
 .TH qmail-lspawn 8
 .SH NAME
 qmail-lspawn \- schedule local deliveries
@@ -6,41 +7,26 @@ qmail-lspawn \- schedule local deliveries
 .I defaultdelivery
 
 .SH DESCRIPTION
-.B qmail-lspawn
-reads a series of local delivery commands from descriptor 0,
-invokes
-.B qmail-local
-to perform the deliveries,
-and prints the results to descriptor 1.
-It passes
-.I defaultdelivery
-to
-.B qmail-local
-as the default delivery instruction.
+\fBqmail-lspawn\fR reads a series of local delivery commands from
+descriptor 0, invokes \fBqmail-local\fR to perform the deliveries, and
+prints the results to descriptor 1. It passes \fIdefaultdelivery\fR to
+\fBqmail-local\fR as the default delivery instruction.
 
-.B qmail-lspawn
-invokes
-.B qmail-local
-asynchronously,
-so the results may not be in the same order as the commands. If the
-environment variable QMAILLOCAL is defined the executable defined by
-QMAILLOCAL is invoked instead.
+\fBqmail-lspawn\fR invokes \fBqmail-local\fR asynchronously, so the results
+may not be in the same order as the commands. If the environment variable
+\fBQMAILLOCAL\fR is defined the executable defined by \fBQMAILLOCAL\fR is
+invoked instead.
 
-.B qmail-lspawn
-sets the environment variable MESSID pointing message file in the queue.
+\fBqmail-lspawn\fR sets the environment variable \fBMESSID\fR pointing
+message file in the queue.
 
-For each recipient address,
-.B qmail-lspawn
-finds out which local user controls that address.
-It first checks the
-.B qmail-users
-mechanism; if the address is not listed there, it invokes
-.BR qmail-getpw .
-.B qmail-lspawn
-then runs
-.B qmail-local
-under the user's uid and gid.
-It does not set up any supplementary groups.
+For each recipient address, \fBqmail-lspawn\fR finds out which local user
+controls that address. It first checks the \fBqmail-users\fR mechanism; if
+the address is not listed there, it invokes \fBqmail-getpw\fR.
+\fBqmail-lspawn\fR then runs \fBqmail-local\fR under the user's uid and
+gid. If the environment variable \fBSETUSER_PRIVILEGES\fR is set, it sets
+up supplementary groups for the user. \fBqmail-lspawn\fR does not perform
+deliveries as root.
 
 If the environment variable \fBAUTHSELF\fR is set, \fBqmail-lspawn\fR
 connects to MySQL and fetches user records for virtual domains in
@@ -55,9 +41,9 @@ domain portion, doesn't belong to a virtual domain set in IndiMail, the
 mail will be silently deliverd to local user, ignoring the domain name
 following the '@' sign.
 
-For all other cases not covered by setting \fbAUTHSELF\fR environment variable,
-.B qmail-lspawn
-treats an empty mailbox name as a trash address.
+For all other cases not covered by setting \fbAUTHSELF\fR environment
+variable, \fBqmail-lspawn\fR treats an empty mailbox name as a trash
+address.
 
 .SH Virtual Package Functionality
 \fBqmail-lspawn\fR can load an external library to add functionality. The
@@ -81,9 +67,8 @@ PWSTRUCT to "No such user". However, a delivery agent like
 \fBvdelivermail(8)\fR reroutes the email to the correct destination host
 which has the user account, using \fBqmail-remote\fR.
 
-.B qmail-lspawn
-goes ahead without attempting to load external library if
-AUTHSELF was not set.
+\fBqmail-lspawn\fR goes ahead without attempting to load external library
+if \fBAUTHSELF\fR was not set.
 
 .B qmail-lspawn
 runs with uid 0.
